<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACD9FF"
    tools:context=".SettingFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="414dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/setting"
                android:textColor="#2040F3"
                android:textSize="24sp"
                tools:text="Textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="10dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/tt" />

                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="10dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:src="@drawable/vol_max" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="552dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/text_size"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spin_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/size_array"
                    android:gravity="right"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="552dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/language_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/language_array"
                    android:gravity="right"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center|left"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_chart"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center|left"
                    android:text="@string/btn_chart"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/thankslist"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center|left"
                    android:text="@string/thankslist"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PP"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center|left"
                    android:text="@string/PP"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#2040F3"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:text="@string/version" />

    </LinearLayout>

</FrameLayout>